; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/util/extr_mmal_connection.c_mmal_connection_enable.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/util/extr_mmal_connection.c_mmal_connection_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i8*, i32, %struct.TYPE_11__*, i32, %struct.TYPE_9__*, %struct.TYPE_9__* }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_9__ = type { i32, i64, i8*, i8*, i8*, i8* }

@.str = private unnamed_addr constant [7 x i8] c"%p, %s\00", align 1
@MMAL_SUCCESS = common dso_local global i64 0, align 8
@MMAL_CONNECTION_FLAG_KEEP_BUFFER_REQUIREMENTS = common dso_local global i32 0, align 4
@MMAL_CONNECTION_FLAG_TUNNELLING = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [32 x i8] c"output port couldn't be enabled\00", align 1
@MMAL_PORT_CAPABILITY_PASSTHROUGH = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [21 x i8] c"couldn't resize pool\00", align 1
@MMAL_PORT_TYPE_CLOCK = common dso_local global i64 0, align 8
@mmal_connection_bh_clock_cb = common dso_local global i32* null, align 8
@mmal_connection_bh_out_cb = common dso_local global i32* null, align 8
@mmal_connection_bh_in_cb = common dso_local global i32* null, align 8
@.str.3 = private unnamed_addr constant [31 x i8] c"input port couldn't be enabled\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mmal_connection_enable(%struct.TYPE_10__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 6
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %11, align 8
  store %struct.TYPE_9__* %12, %struct.TYPE_9__** %4, align 8
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %13, i32 0, i32 5
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %14, align 8
  store %struct.TYPE_9__* %15, %struct.TYPE_9__** %5, align 8
  %16 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %17, i32 0, i32 4
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @LOG_TRACE(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), %struct.TYPE_10__* %16, i32 %19)
  %21 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %1
  %26 = load i64, i64* @MMAL_SUCCESS, align 8
  store i64 %26, i64* %2, align 8
  br label %244

27:                                               ; preds = %1
  %28 = call i8* (...) @vcos_getmicrosecs()
  %29 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %29, i32 0, i32 1
  store i8* %28, i8** %30, align 8
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* @MMAL_CONNECTION_FLAG_KEEP_BUFFER_REQUIREMENTS, align 4
  %35 = and i32 %33, %34
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %82, label %37

37:                                               ; preds = %27
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %38, i32 0, i32 5
  %40 = load i8*, i8** %39, align 8
  %41 = icmp ne i8* %40, null
  br i1 %41, label %42, label %48

42:                                               ; preds = %37
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %43, i32 0, i32 5
  %45 = load i8*, i8** %44, align 8
  %46 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %46, i32 0, i32 3
  store i8* %45, i8** %47, align 8
  br label %48

48:                                               ; preds = %42, %37
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %50 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %49, i32 0, i32 4
  %51 = load i8*, i8** %50, align 8
  %52 = icmp ne i8* %51, null
  br i1 %52, label %53, label %59

53:                                               ; preds = %48
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %55 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %54, i32 0, i32 4
  %56 = load i8*, i8** %55, align 8
  %57 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %58 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %57, i32 0, i32 2
  store i8* %56, i8** %58, align 8
  br label %59

59:                                               ; preds = %53, %48
  %60 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %61 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %60, i32 0, i32 5
  %62 = load i8*, i8** %61, align 8
  %63 = icmp ne i8* %62, null
  br i1 %63, label %64, label %70

64:                                               ; preds = %59
  %65 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %66 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %65, i32 0, i32 5
  %67 = load i8*, i8** %66, align 8
  %68 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %69 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %68, i32 0, i32 3
  store i8* %67, i8** %69, align 8
  br label %70

70:                                               ; preds = %64, %59
  %71 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %72 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %71, i32 0, i32 4
  %73 = load i8*, i8** %72, align 8
  %74 = icmp ne i8* %73, null
  br i1 %74, label %75, label %81

75:                                               ; preds = %70
  %76 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %77 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %76, i32 0, i32 4
  %78 = load i8*, i8** %77, align 8
  %79 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %80 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %79, i32 0, i32 2
  store i8* %78, i8** %80, align 8
  br label %81

81:                                               ; preds = %75, %70
  br label %82

82:                                               ; preds = %81, %27
  %83 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %84 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %83, i32 0, i32 2
  %85 = load i32, i32* %84, align 8
  %86 = load i32, i32* @MMAL_CONNECTION_FLAG_TUNNELLING, align 4
  %87 = and i32 %85, %86
  %88 = icmp ne i32 %87, 0
  br i1 %88, label %89, label %97

89:                                               ; preds = %82
  %90 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %91 = call i64 @mmal_port_enable(%struct.TYPE_9__* %90, i32* null)
  store i64 %91, i64* %8, align 8
  %92 = load i64, i64* %8, align 8
  %93 = icmp ne i64 %92, 0
  br i1 %93, label %94, label %96

94:                                               ; preds = %89
  %95 = call i32 @LOG_ERROR(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  br label %96

96:                                               ; preds = %94, %89
  br label %226

97:                                               ; preds = %82
  %98 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %99 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %98, i32 0, i32 3
  %100 = load i8*, i8** %99, align 8
  %101 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %102 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %101, i32 0, i32 3
  %103 = load i8*, i8** %102, align 8
  %104 = call i8* @MMAL_MAX(i8* %100, i8* %103)
  store i8* %104, i8** %6, align 8
  %105 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %106 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %105, i32 0, i32 2
  %107 = load i8*, i8** %106, align 8
  %108 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %109 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %108, i32 0, i32 2
  %110 = load i8*, i8** %109, align 8
  %111 = call i8* @MMAL_MAX(i8* %107, i8* %110)
  store i8* %111, i8** %7, align 8
  %112 = load i8*, i8** %6, align 8
  %113 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %114 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %113, i32 0, i32 3
  store i8* %112, i8** %114, align 8
  %115 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %116 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %115, i32 0, i32 3
  store i8* %112, i8** %116, align 8
  %117 = load i8*, i8** %7, align 8
  %118 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %119 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %118, i32 0, i32 2
  store i8* %117, i8** %119, align 8
  %120 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %121 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %120, i32 0, i32 2
  store i8* %117, i8** %121, align 8
  %122 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %123 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %122, i32 0, i32 0
  %124 = load i32, i32* %123, align 8
  %125 = load i32, i32* @MMAL_PORT_CAPABILITY_PASSTHROUGH, align 4
  %126 = and i32 %124, %125
  %127 = icmp ne i32 %126, 0
  br i1 %127, label %128, label %129

128:                                              ; preds = %97
  store i8* null, i8** %7, align 8
  br label %129

129:                                              ; preds = %128, %97
  %130 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %131 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %130, i32 0, i32 3
  %132 = load %struct.TYPE_11__*, %struct.TYPE_11__** %131, align 8
  %133 = load i8*, i8** %6, align 8
  %134 = load i8*, i8** %7, align 8
  %135 = call i64 @mmal_pool_resize(%struct.TYPE_11__* %132, i8* %133, i8* %134)
  store i64 %135, i64* %8, align 8
  %136 = load i64, i64* %8, align 8
  %137 = load i64, i64* @MMAL_SUCCESS, align 8
  %138 = icmp ne i64 %136, %137
  br i1 %138, label %139, label %141

139:                                              ; preds = %129
  %140 = call i32 @LOG_ERROR(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  br label %226

141:                                              ; preds = %129
  %142 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %143 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %144 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %143, i32 0, i32 1
  %145 = load i64, i64* %144, align 8
  %146 = load i64, i64* @MMAL_PORT_TYPE_CLOCK, align 8
  %147 = icmp eq i64 %145, %146
  br i1 %147, label %148, label %150

148:                                              ; preds = %141
  %149 = load i32*, i32** @mmal_connection_bh_clock_cb, align 8
  br label %152

150:                                              ; preds = %141
  %151 = load i32*, i32** @mmal_connection_bh_out_cb, align 8
  br label %152

152:                                              ; preds = %150, %148
  %153 = phi i32* [ %149, %148 ], [ %151, %150 ]
  %154 = call i64 @mmal_port_enable(%struct.TYPE_9__* %142, i32* %153)
  store i64 %154, i64* %8, align 8
  %155 = load i64, i64* %8, align 8
  %156 = icmp ne i64 %155, 0
  br i1 %156, label %157, label %159

157:                                              ; preds = %152
  %158 = call i32 @LOG_ERROR(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  br label %226

159:                                              ; preds = %152
  %160 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %161 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %162 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %161, i32 0, i32 1
  %163 = load i64, i64* %162, align 8
  %164 = load i64, i64* @MMAL_PORT_TYPE_CLOCK, align 8
  %165 = icmp eq i64 %163, %164
  br i1 %165, label %166, label %168

166:                                              ; preds = %159
  %167 = load i32*, i32** @mmal_connection_bh_clock_cb, align 8
  br label %170

168:                                              ; preds = %159
  %169 = load i32*, i32** @mmal_connection_bh_in_cb, align 8
  br label %170

170:                                              ; preds = %168, %166
  %171 = phi i32* [ %167, %166 ], [ %169, %168 ]
  %172 = call i64 @mmal_port_enable(%struct.TYPE_9__* %160, i32* %171)
  store i64 %172, i64* %8, align 8
  %173 = load i64, i64* %8, align 8
  %174 = icmp ne i64 %173, 0
  br i1 %174, label %175, label %179

175:                                              ; preds = %170
  %176 = call i32 @LOG_ERROR(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0))
  %177 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %178 = call i32 @mmal_port_disable(%struct.TYPE_9__* %177)
  br label %226

179:                                              ; preds = %170
  %180 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %181 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %180, i32 0, i32 1
  %182 = load i64, i64* %181, align 8
  %183 = load i64, i64* @MMAL_PORT_TYPE_CLOCK, align 8
  %184 = icmp eq i64 %182, %183
  br i1 %184, label %185, label %225

185:                                              ; preds = %179
  %186 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %187 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %186, i32 0, i32 1
  %188 = load i64, i64* %187, align 8
  %189 = load i64, i64* @MMAL_PORT_TYPE_CLOCK, align 8
  %190 = icmp eq i64 %188, %189
  br i1 %190, label %191, label %225

191:                                              ; preds = %185
  %192 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %193 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %192, i32 0, i32 3
  %194 = load %struct.TYPE_11__*, %struct.TYPE_11__** %193, align 8
  %195 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %194, i32 0, i32 0
  %196 = load i32, i32* %195, align 4
  %197 = call i32* @mmal_queue_get(i32 %196)
  store i32* %197, i32** %9, align 8
  br label %198

198:                                              ; preds = %223, %191
  %199 = load i32*, i32** %9, align 8
  %200 = icmp ne i32* %199, null
  br i1 %200, label %201, label %224

201:                                              ; preds = %198
  %202 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %203 = load i32*, i32** %9, align 8
  %204 = call i32 @mmal_port_send_buffer(%struct.TYPE_9__* %202, i32* %203)
  %205 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %206 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %205, i32 0, i32 3
  %207 = load %struct.TYPE_11__*, %struct.TYPE_11__** %206, align 8
  %208 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %207, i32 0, i32 0
  %209 = load i32, i32* %208, align 4
  %210 = call i32* @mmal_queue_get(i32 %209)
  store i32* %210, i32** %9, align 8
  %211 = load i32*, i32** %9, align 8
  %212 = icmp ne i32* %211, null
  br i1 %212, label %213, label %223

213:                                              ; preds = %201
  %214 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %215 = load i32*, i32** %9, align 8
  %216 = call i32 @mmal_port_send_buffer(%struct.TYPE_9__* %214, i32* %215)
  %217 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %218 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %217, i32 0, i32 3
  %219 = load %struct.TYPE_11__*, %struct.TYPE_11__** %218, align 8
  %220 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %219, i32 0, i32 0
  %221 = load i32, i32* %220, align 4
  %222 = call i32* @mmal_queue_get(i32 %221)
  store i32* %222, i32** %9, align 8
  br label %223

223:                                              ; preds = %213, %201
  br label %198

224:                                              ; preds = %198
  br label %225

225:                                              ; preds = %224, %185, %179
  br label %226

226:                                              ; preds = %225, %175, %157, %139, %96
  %227 = call i8* (...) @vcos_getmicrosecs()
  %228 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %229 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %228, i32 0, i32 1
  %230 = load i8*, i8** %229, align 8
  %231 = ptrtoint i8* %227 to i64
  %232 = ptrtoint i8* %230 to i64
  %233 = sub i64 %231, %232
  %234 = inttoptr i64 %233 to i8*
  %235 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %236 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %235, i32 0, i32 1
  store i8* %234, i8** %236, align 8
  %237 = load i64, i64* %8, align 8
  %238 = load i64, i64* @MMAL_SUCCESS, align 8
  %239 = icmp eq i64 %237, %238
  %240 = zext i1 %239 to i32
  %241 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %242 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %241, i32 0, i32 0
  store i32 %240, i32* %242, align 8
  %243 = load i64, i64* %8, align 8
  store i64 %243, i64* %2, align 8
  br label %244

244:                                              ; preds = %226, %25
  %245 = load i64, i64* %2, align 8
  ret i64 %245
}

declare dso_local i32 @LOG_TRACE(i8*, %struct.TYPE_10__*, i32) #1

declare dso_local i8* @vcos_getmicrosecs(...) #1

declare dso_local i64 @mmal_port_enable(%struct.TYPE_9__*, i32*) #1

declare dso_local i32 @LOG_ERROR(i8*) #1

declare dso_local i8* @MMAL_MAX(i8*, i8*) #1

declare dso_local i64 @mmal_pool_resize(%struct.TYPE_11__*, i8*, i8*) #1

declare dso_local i32 @mmal_port_disable(%struct.TYPE_9__*) #1

declare dso_local i32* @mmal_queue_get(i32) #1

declare dso_local i32 @mmal_port_send_buffer(%struct.TYPE_9__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
